	updated after inserting new events.
2017-07-26 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in RDLogEditb(1) that caused the incorrect icon to be
	displayed for macro carts when editing a log.
2017-07-26 Fred Gleason <fredg@paravelsystems.com>
	* Added RDLibraryb(1) to the Windows installer.
2017-07-26 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 1.1.0int00.
2017-07-27 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 1.2.0.
2017-08-11 Fred Gleason <fredg@paravelsystems.com>
	* Removed 'ALL' from the list of services in the 'Add New Log' and
	'Edit Log' dialogs.
2017-08-11 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug that permitted logs to be created with names containing
	spaces.
2017-08-23 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in rdlogeditb(1) that caused insertion of new meta
	events to fail to be saved.
2017-08-31 Fred Gleason <fredg@paravelsystems.com>
	* Added support for the 'user_agent' field in the Rivendell-C-API.
2017-09-01 Fred Gleason <fredg@paravelsystems.com>
	* Added support for the 'user_agent' field for direct GET http calls
	from the ALSA stream player.
2017-09-01 Fred Gleason <fredg@paravelsystems.com>
	* Added support for the 'user_agent' field for direct GET http calls
	from the MME stream player.
2017-09-05 Fred Gleason <fredg@paravelsystems.com>
	* Modified USER_AGENT string for Linux to include OS and architecture
	information.
2017-09-05 Fred Gleason <fredg@paravelsystems.com>
	* Modified USER_AGENT string for Windows to include OS and architecture
	information.
2017-09-05 Fred Gleason <fredg@paravelsystems.com>
	* Modified USER_AGENT string for Linux to include OS and architecture
	information.
2017-09-11 Fred Gleason <fredg@paravelsystems.com>
	* Added a USER_AGENT entry for the Rivendell-C-API.
2017-09-21 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 1.2.1.