@@ -386,3 +386,6 @@
 	* Added a USER_AGENT entry for the Rivendell-C-API.
 2017-09-21 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the package version to 1.2.1.
+2017-09-22 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed a bug in 'src/common/config.cpp' that caused the USER_AGENT
+	string to mis-report the version number under Windows.
